tempfile/derive_more/tests/compile_fail/debug/wrong_unnamed_parameter.rs
#[derive(derive_more::Debug)]
pub struct Foo(#[debug("Stuff({_1})")] String);

fn main() {}
